--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,8 @@
   <script src="bower_components/angular/angular.js"></script>
   <!-- my insertions goes here -->
   <script type="text/javascript" src="js/truncate.js" ></script>
-  <script type="text/javascript" src="js/controllers.js"></script>  
+  <script type="text/javascript" src="js/controllers.js"></script>
+  <script type="text/javascript" src="js/services.js"></script>
   <script type="text/javascript" src="js/app.js"></script>  
 </head>
 
@@ -30,6 +31,7 @@
         </div>
         <div class="col-md-10">
           {{mentor.name}}<br />
+          {{mentor.bio}}<br />
           {{mentor.newBio}}
         </div>
       </div>
