splits text then strips it to prepare to counting

--- a/app/index.html
+++ b/app/index.html
@@ -31,8 +31,10 @@
         </div>
         <div class="col-md-10">
           {{mentor.name}}<br />
-          {{mentor.bio}}<br />
-          {{mentor.newBio}}
+          <!-- <pre>{{mentor.bio}}</pre><br /> -->
+         <pre> {{mentor.newBio[0]}}</pre>
+         <hl \>
+         <code>{{mentor.text}}</code>
         </div>
       </div>
     </div>
