text splitted fine but not reformatted

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,9 @@
           <!-- <pre>{{mentor.bio}}</pre><br /> -->
          <pre> {{mentor.newBio[0]}}</pre>
          <hl \>
-         <code>{{mentor.text}}</code>
+         <div class="row thumbnail" ng-repeat="(index,splited) in mentor.splitText">
+         <pre>{{splited}}</pre>
+         </div>
         </div>
       </div>
     </div>
