make formatted split

--- a/app/index.html
+++ b/app/index.html
@@ -34,9 +34,10 @@
           <!-- <pre>{{mentor.bio}}</pre><br /> -->
          <pre> {{mentor.newBio[0]}}</pre>
          <hl \>
-         <div class="row thumbnail" ng-repeat="(index,splited) in mentor.splitText">
+         <pre>{{mentor.testPrev}}</pre>
+<!--          <div class="row thumbnail" ng-repeat="(index,splited) in mentor.splitText">
          <pre>{{splited}}</pre>
-         </div>
+         </div> -->
         </div>
       </div>
     </div>
