textSplit is ready to testing and refactoring

--- a/app/index.html
+++ b/app/index.html
@@ -32,9 +32,8 @@
         <div class="col-md-10">
           {{mentor.name}}<br />
           <!-- <pre>{{mentor.bio}}</pre><br /> -->
-         <pre> {{mentor.newBio[0]}}</pre>
+         <pre> {{mentor.newBio}}</pre>
          <hl \>
-         <pre>{{mentor.testPrev}}</pre>
 <!--          <div class="row thumbnail" ng-repeat="(index,splited) in mentor.splitText">
          <pre>{{splited}}</pre>
          </div> -->
